--- a/app/package.json
+++ b/app/package.json
@@ -19,10 +19,12 @@
     "react-native": "0.71.7",
     "react-native-blur": "^3.2.2",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-picker-select": "^8.0.4",
     "react-native-reanimated": "^3.1.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-snap-carousel": "^4.0.0-beta.6",
+    "react-native-vector-icons": "^9.2.0",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4"
   },
